--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.0",
     "@supabase/supabase-js": "^2.95.3",
+    "ai": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "pdf-parse": "^1.1.1",
     "pdf-lib": "^1.17.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/pdf-parse": "^1.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
